--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Project",
+  "name": "Pilates",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "build": "gulp run-build",
     "start": "gulp serve"
   },
-
+  
   "author": "Alex Oleynichenko",
   "license": "ISC",
   "devDependencies": {
@@ -19,10 +19,12 @@
     "gulp-imagemin": "^3.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-pug": "^3.3.0",
     "gulp-real-favicon": "^0.2.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^2.0.0"
   },
+
   "dependencies": {}
 }
